Fix CSS for iframe so that Google presentation fullscreen button is visible on mobile devices

--- a/_sass/_iframe.scss
+++ b/_sass/_iframe.scss
@@ -1,6 +1,6 @@
 div.iframe-margins {
   margin-left: $margin-leftright-percentage;
-  margin-right: 40%;
+  margin-right: 35%;
 }
 @media print {
   .iframe-margins {
